prerequisites: update linux instructions